[metadata]
name = gramma
version = 1.0
description = Generate samples from a BNF-like probabilistic program.
url = https://github.com/jpleasu/gramma
author = Jason P. Leasure
author_email = jpleasu@gmail.com
long_description = file: README.md
keywords = fuzzing
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.8.0
install_requires =
    lark-parser
    numpy

tests_require =
    mypy
    pytest

zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    glf2cpp = gramma.samplers.generators.cpp:main

[tool:pytest]
testpaths = tests

[mypy]
files = gramma,tests
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = false
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
#disallow_any_decorated = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true

[mypy-tests.*]
check_untyped_defs = false

